3.0.5

Final release by Centure developers
Relicensed under the GNU Lesser General Public License v3
General maintanence, version bump of most electron/vue/node libraries, update of checkpoints and other data etc.
UI - Transaction export functionality



3.0.4

Maintenence release, no major changes.



3.0.2

CORE      - Fix a crash that was triggering on windows builds




3.0.1

Software rebrands to Munt name.
This build represents our final switch from Qt to Electron for UI builds, Qt is completely removed from the codebase, users who require Qt specific functionality should remain on 2.5.0 until the 3.x series matures and gains more features

UI        - New electron based UI
CORE      - Switch to guix for macOS builds as well; all official builds now done on guix
CORE      - Update various library dependencies to latest versions
NET       - Bump MIN_PEER_PROTO_VERSION to 70020; This will disconnect from network all peers not on 2.5.0 or above
UI        - Native M1/arm64 builds for macOS




2.5.0

Introduce reward changes
    
At block 1'619'997 chain forks and per block dev reward is removed, with a once off dev payment of 100'000'000 NLG paid into address GSTG9pQ6yRdGurmjUDGwm8FyYc272vP13b
    
To keep the eventual supply at exactly 700'000'000 other small changes are then made:
    * First halving is brought forward to block 2'074'989
    * We slightly alter the rounding of each halving step to give cleaner numbers
    * We continue halving for more rounds all the way down to 0.00000001 reward
    * Final reward amount continues until block 433'009'989 with the 12.2709 NLG for this period being slowly paid out over a very very long period

Halving schedule as follows (every four years):
    5 mining,          7.5 witness
    2 mining,          4 witness
    1 mining,          2 witness
    0.5 mining,        1 witness
    0.2 mining,        0.5 witness
    0.1 mining,        0.2 witness
    0.05 mining,       0.1 witness
    0.02 mining,       0.05 witness