@@ -4,6 +4,7 @@ Final release by Centure developers
 Relicensed under the GNU Lesser General Public License v3
 General maintanence, version bump of most electron/vue/node libraries, update of checkpoints and other data etc.
 UI - Transaction export functionality
+UI        - Add a basic about dialog displying licensing information
 
 
 
